--- a/UI/UI_MAIN_PROJECT/public/css/Initial_resolve.css
+++ b/UI/UI_MAIN_PROJECT/public/css/Initial_resolve.css
@@ -1,7 +1,33 @@
+@import "compass/css3";
+
+
 th:nth-child(2),th:nth-child(3),th:nth-child(4),th:nth-child(5){
     cursor: pointer;
 }
-.hidden_row th{
+.hidden_row_1, .hidden_row_2, .hidden_row_3 {
     display:none;
      /* height: 0px; */
  }
+
+ table.table-sm th, table.table-sm td{
+    padding-top: .6rem;
+    padding-bottom: .6rem;
+    border-color: white;
+ }
+
+#arrow-right{
+    float: right;
+}
+
+.input_definition{
+    width: 50%;
+    margin: 0 auto;
+}
+
+.input_definition button{
+    margin-top: 30px ;
+}
+
+.input_definition label{
+    margin-top: 70px;
+}
