--- a/UI/UI_MAIN_PROJECT/public/css/Initial_resolve.css
+++ b/UI/UI_MAIN_PROJECT/public/css/Initial_resolve.css
@@ -1,6 +1,3 @@
-@import "compass/css3";
-
-
 th:nth-child(2),th:nth-child(3),th:nth-child(4),th:nth-child(5){
     cursor: pointer;
 }
@@ -30,4 +27,8 @@ th:nth-child(2),th:nth-child(3),th:nth-child(4),th:nth-child(5){
 
 .input_definition label{
     margin-top: 70px;
+}
+
+#table{
+    display: None;
 }
