--- a/UI/UI_MAIN_PROJECT/public/css/Initial_resolve.css
+++ b/UI/UI_MAIN_PROJECT/public/css/Initial_resolve.css
@@ -16,16 +16,16 @@ th:nth-child(2),th:nth-child(3),th:nth-child(4),th:nth-child(5){
     float: right;
 }
 
-.input_definition{
+.input{
     width: 50%;
     margin: 0 auto;
 }
 
-.input_definition button{
+.input button{
     margin-top: 30px ;
 }
 
-.input_definition label{
+.input label{
     margin-top: 70px;
 }
 
