--- a/UI/UI_MAIN_PROJECT/public/css/Initial_list.css
+++ b/UI/UI_MAIN_PROJECT/public/css/Initial_list.css
@@ -3,3 +3,11 @@ table.table a {
     color: #212529;
     font-size: x-large;
 }
+
+.navbar.navbar-light .breadcrumb .nav-item.active>.nav-link, .navbar.navbar-light .navbar-nav .nav-item.active>.nav-link{
+    border-radius: 20px;
+}
+
+.navbar.navbar-light .breadcrumb .nav-item .nav-link:hover, .navbar.navbar-light .navbar-nav .nav-item .nav-link:hover{
+    border-radius: 20px;
+}
